post margin fixed, comments button only visible when user is logged

--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,6 @@ background-color: #e2e2e2;
 .dark-App{
   filter: brightness(0.65) blur(1.5px);
 }
-input,select{
+input,select,button{
   outline: none;
 }
