--- a/src/topBar/topBar.css
+++ b/src/topBar/topBar.css
@@ -7,7 +7,7 @@
   display: flex;
   align-items: center;
   margin-top: 0;
-  z-index: 1;
+  z-index: 8;
 }
 .top-bar h1 {
   margin-left: 1vw;
@@ -38,20 +38,20 @@
   border-radius: 3px;
 }
 .middle img {
-  height: 1.9vh;
+  height: 0.9rem;
 }
 .middle img:hover {
   cursor: pointer;
 }
 .top-bar input {
   border-radius: 3px;
-  width: 30vw;
-  height: 0.8vh;
+  width: 14rem;
+  height: 1.1rem;
   font-family: "PT Sans", sans-serif;
   background-color: #00000010;
   border: 1px solid rgba(0, 0, 0, 0.15);
   font-family: "Lato", sans-serif;
-  padding: 1%;
+  padding-left: 1%;
 }
 .right {
   display: flex;
@@ -124,40 +124,5 @@
     transform: rotate(360deg);
   }
 }
-@media (max-width: 1700px) {
-  #log-in,
-  #sign-up {
-    font-size: 0.9rem;
-  }
-  .top-bar h1 {
-    font-size: 1.2rem;
-  }
-  .top-bar input {
-    height: 1.1vh;
-  }
-  .middle img {
-    height: 1.6vh;
-  }
-}
-@media (max-width: 1450px) {
-  #log-in,
-  #sign-up {
-    font-size: 0.9rem;
-  }
-}
-@media (max-width: 1200px) {
-  #log-in,
-  #sign-up {
-    font-size: 0.7rem;
-  }
-  .top-bar h1 {
-    font-size: 1rem;
-  }
-  .top-bar input {
-    height: 1.3vh;
-    width: 25vw;
-  }
-  .middle img {
-    height: 1.2vh;
-  }
-}
+
+
